deploy/vote/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: vote
    tier: front
  name: vote
spec:
  ports:
  - name: "80"
    nodePort: 30000
    port: 80
    protocol: TCP
    targetPort: 80
  selector:
    app: vote
  type: NodePort
